<resources>
    <string name="app_name">Forgiveness</string>


    <string-array name="forgiveness">
        <item>২ আল-বাকারা</item>
        <item>৩ আল-ই-ইমরান</item>
        <item>৭ আল-আরাফ</item>
        <item>২১ আল-আন্বিয়া</item>
        <item>২৩ আল-মুমিনুন</item>
        <item>২৮ আল-কাসাস</item>
        <item>৪০ আল-গাফির</item>
        <item>৫৯ আল-হাসর</item>
        <item>৬০ আল-মুমতাহিনাা</item>
        <item>৬৬ আত-তাহরীম</item>
        <item>৬৮ আল-কালাম</item>
    </string-array>

    <string name="sura1">রসূল বিশ্বাস রাখেন ঐ সমস্ত বিষয় সম্পর্কে যা তাঁর পালনকর্তার পক্ষ থেকে তাঁর কাছে অবতীর্ণ হয়েছে এবং মুসলমানরাও সবাই বিশ্বাস রাখে আল্লাহর প্রতি, তাঁর ফেরেশতাদের প্রতি, তাঁর গ্রন্থসমুহের প্রতি এবং তাঁর পয়গম্বরগণের প্রতি। তারা বলে আমরা তাঁর পয়গম্বরদের মধ্যে কোন তারতম্য করিনা। তারা বলে, আমরা শুনেছি এবং কবুল করেছি। আমরা তোমার ক্ষমা চাই, হে আমাদের পালনকর্তা। তোমারই দিকে প্রত্যাবর্তন করতে হবে। [সুরা বাকারা ২:২৮৫]</string>
    <string name="sura1_1">আল্লাহ কাউকে তার সাধ্যাতীত কোন কাজের ভার দেন না, সে তাই পায় যা সে উপার্জন করে এবং তাই তার উপর বর্তায় যা সে করে। হে আমাদের পালনকর্তা, যদি আমরা ভুলে যাই কিংবা ভুল করি, তবে আমাদেরকে অপরাধী করো না। হে আমাদের পালনকর্তা! এবং আমাদের উপর এমন দায়িত্ব অর্পণ করো না, যেমন আমাদের পূর্ববর্তীদের উপর অর্পণ করেছ, হে আমাদের প্রভূ! এবং আমাদের দ্বারা ঐ বোঝা বহন করিও না, যা বহন করার শক্তি আমাদের নাই। আমাদের পাপ মোচন কর। আমাদেরকে ক্ষমা কর এবং আমাদের প্রতি দয়া কর। তুমিই আমাদের প্রভু। সুতরাং কাফের সম্প্রদায়ের বিরুদ্ধে আমাদের কে সাহায্যে কর। [ সুরা বাকারা ২:২৮৬ ]</string>

    <string name="sura2">যারা বলে, হে আমাদের পালনকর্তা, আমরা ঈমান এনেছি, কাজেই আমাদের গোনাহ ক্ষমা করে দাও আর আমাদেরকে দোযখের আযাব থেকে রক্ষা কর।</string>
    <string name="sura2_1">তারা আর কিছুই বলেনি-শুধু বলেছে, হে আমাদের পালনকর্তা! মোচন করে দাও আমাদের পাপ এবং যা কিছু বাড়াবাড়ি হয়ে গেছে আমাদের কাজে। আর আমাদিগকে দৃঢ় রাখ এবং কাফেরদের উপর আমাদিগকে সাহায্য কর।</string>
    <string name="sura2_2">হে আমাদের পালনকর্তা! আমরা নিশ্চিতরূপে শুনেছি একজন আহবানকারীকে ঈমানের প্রতি আহবান করতে যে, তোমাদের পালনকর্তার প্রতি ঈমান আন; তাই আমরা ঈমান এনেছি। হে আমাদের পালনকর্তা! অতঃপর আমাদের সকল গোনাহ মাফ কর এবং আমাদের সকল দোষত্রুটি দুর করে দাও, আর আমাদের মৃত্যু দাও নেক লোকদের সাথে।</string>


    <string name="sura3">তারা বলল, \‘হে আমাদের রব, আমরা নিজদের উপর যুল্ম করেছি। আর যদি আপনি আমাদেরকে ক্ষমা না করেন এবং আমাদেরকে রহম না করেন তবে অবশ্যই আমরা ক্ষতিগ্রস্তদের অন্তর্ভুক্ত হব\’।</string>
    <string name="sura3_1">আর যখন আমার নির্ধারিত সময়ে মূসা এসে গেল এবং তার রব তার সাথে কথা বললেন। সে বলল, \‘হে আমার রব, আপনি আমাকে দেখা দিন, আমি আপনাকে দেখব।\’ তিনি বললেন, তুমি আমাকে কখনো দেখবে না। বরং তুমি পাহাড়ের দিকে তাকাও, অতঃপর তা যদি নিজ স্থানে স্থির থাকে তবে তুমি অচিরেই আমাকে দেখবে। অতঃপর যখন তার রব পাহাড়ের উপর নূর প্রকাশ করলেন তখন তা তাকে চূর্ণ করে দিল এবং মূসা বেহুঁশ হয়ে পড়ে গেল। অতঃপর যখন তার হুঁশ আসল তখন সে বলল, \‘আপনি পবিত্র মহান, আমি আপনার নিকট তাওবা করলাম এবং আমি মুমিনদের মধ্যে প্রথম।\’</string>


    <string name="sura4">আর স্মরণ কর যুন-নূন এর কথা, যখন সে রাগান্বিত অবস্থায় চলে গিয়েছিল এবং মনে করেছিল যে, আমি তার উপর ক্ষমতা প্রয়োগ করব না। তারপর সে অন্ধকার থেকে ডেকে বলেছিল, \‘আপনি ছাড়া কোন (সত্য) ইলাহ নেই\’। আপনি পবিত্র মহান। নিশ্চয় আমি ছিলাম যালিম\’ । </string>
    <string name="sura5">বল, \‘হে আমার প্রতিপালক! তুমি ক্ষমা কর ও দয়া কর, দয়ালুদের মধ্যে তুমিই তো শ্রেষ্ঠ দয়ালু।\’</string>
    <string name="sura6">তিনি বললেন, হে আমার পালনকর্তা, আমি তো নিজের উপর জুলুম করে ফেলেছি। অতএব, আমাকে ক্ষমা করুন। আল্লাহ তাকে ক্ষমা করলেন। নিশ্চয় তিনি ক্ষমাশীল, দয়ালু।</string>
    <string name="sura7">যারা আরশ ধারণ করে আছে এবং যারা এর চারিপাশ ঘিরে আছে তারা তাদের প্রতিপালকের পবিত্রতা ও মহিমা প্রশংসার সাথে ঘোষণা করে এবং তাতে বিশ্বাস স্থাপন করে এবং বিশ্বাসীদের জন্য ক্ষমা প্রার্থনা করে বলে, \‘হে আমাদের প্রতিপালক! তোমার দয়া ও জ্ঞান সর্বব্যাপী; অতএব যারা তওবা করে ও তোমার পথ অবলম্বন করে, তুমি তাদেরকে ক্ষমা কর এবং জাহান্নামের শাস্তি হতে রক্ষা কর।</string>
    <string name="sura8">যারা তাদের পরে এসেছে তারা বলে: \‘হে আমাদের রব, আমাদেরকে ও আমাদের ভাই যারা ঈমান নিয়ে আমাদের পূর্বে অতিক্রান্ত হয়েছে তাদেরকে ক্ষমা করুন; এবং যারা ঈমান এনেছিল তাদের জন্য আমাদের অন্তরে কোন বিদ্বেষ রাখবেন না; হে আমাদের রব, নিশ্চয় আপনি দয়াবান, পরম দয়ালু।</string>
    <string name="sura9">তোমাদের জন্যে ইব্রাহীম ও তাঁর সঙ্গীগণের মধ্যে চমৎকার আদর্শ রয়েছে। তারা তাদের সম্প্রদায়কে বলেছিলঃ তোমাদের সাথে এবং তোমরা আল্লাহর পরিবর্তে যার এবাদত কর, তার সাথে আমাদের কোন সম্পর্ক নেই। আমরা তোমাদের মানি না। তোমরা এক আল্লাহর প্রতি বিশ্বাস স্থাপন না করলে তোমাদের মধ্যে ও আমাদের মধ্যে চিরশত্রুতা থাকবে। কিন্তু ইব্রাহীমের উক্তি তাঁর পিতার উদ্দেশে এই আদর্শের ব্যতিক্রম। তিনি বলেছিলেনঃ আমি অবশ্যই তোমার জন্য ক্ষমাপ্রার্থনা করব। তোমার উপকারের জন্যে আল্লাহর কাছে আমার আর কিছু করার নেই। হে আমাদের পালনকর্তা! আমরা তোমারই উপর ভরসা করেছি, তোমারই দিকে মুখ করেছি এবং তোমারই নিকট আমাদের প্রত্যাবর্তন।</string>
    <string name="sura10">মুমিনগণ! তোমরা আল্লাহ তা’আলার কাছে তওবা কর-আন্তরিক তওবা। আশা করা যায়, তোমাদের পালনকর্তা তোমাদের মন্দ কর্মসমূহ মোচন করে দেবেন এবং তোমাদেরকে দাখিল করবেন জান্নাতে, যার তলদেশে নদী প্রবাহিত। সেদিন আল্লাহ নবী এবং তাঁর বিশ্বাসী সহচরদেরকে অপদস্থ করবেন না। তাদের নূর তাদের সামনে ও ডানদিকে ছুটোছুটি করবে। তারা বলবেঃ হে আমাদের পালনকর্তা, আমাদের নূরকে পূর্ণ করে দিন এবং আমাদেরকে ক্ষমা করুন। নিশ্চয় আপনি সবকিছুর উপর সর্ব শক্তিমান।</string>
    <string name="sura11">তারা বলল, \‘আমরা আমাদের রবের পবিত্রতা ঘোষণা করছি। অবশ্যই আমরা যালিম ছিলাম\’। </string>


    //arbi
    <string name="sura1_arbi">آمَنَ الرَّسُولُ بِمَا أُنزِلَ إِلَيْهِ مِن رَّبِّهِ وَالْمُؤْمِنُونَ كُلٌّ آمَنَ بِاللّهِ وَمَلآئِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ لاَ نُفَرِّقُ بَيْنَ أَحَدٍ مِّن رُّسُلِهِ وَقَالُواْ سَمِعْنَا وَأَطَعْنَا غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ</string>
    <string name="sura1_1_arbi">لاَ يُكَلِّفُ اللّهُ نَفْسًا إِلاَّ وُسْعَهَا لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا اكْتَسَبَتْ رَبَّنَا لاَ تُؤَاخِذْنَا إِن نَّسِينَا أَوْ أَخْطَأْنَا رَبَّنَا وَلاَ تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِن قَبْلِنَا رَبَّنَا وَلاَ تُحَمِّلْنَا مَا لاَ طَاقَةَ لَنَا بِهِ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا أَنتَ مَوْلاَنَا فَانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ</string>

    <string name="sura2_arbi">الَّذِينَ يَقُولُونَ رَبَّنَا إِنَّنَا آمَنَّا فَاغْفِرْ لَنَا ذُنُوبَنَا وَقِنَا عَذَابَ النَّارِ</string>
    <string name="sura2_1_arbi">وَمَا كَانَ قَوْلَهُمْ إِلاَّ أَن قَالُواْ ربَّنَا اغْفِرْ لَنَا ذُنُوبَنَا وَإِسْرَافَنَا فِي أَمْرِنَا وَثَبِّتْ أَقْدَامَنَا وانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ</string>
    <string name="sura2_2_arbi">رَّبَّنَا إِنَّنَا سَمِعْنَا مُنَادِيًا يُنَادِي لِلإِيمَانِ أَنْ آمِنُواْ بِرَبِّكُمْ فَآمَنَّا رَبَّنَا فَاغْفِرْ لَنَا ذُنُوبَنَا وَكَفِّرْ عَنَّا سَيِّئَاتِنَا وَتَوَفَّنَا مَعَ الأبْرَارِ</string>


    <string name="sura3_arbi">قَالَا رَبَّنَا ظَلَمْنَا أَنْفُسَنَا وَإِنْ لَمْ تَغْفِرْ لَنَا وَتَرْحَمْنَا لَنَكُونَنَّ مِنَ الْخَاسِرِينَ</string>
    <string name="sura3_1_arbi">وَلَمَّا جَاءَ مُوسَى لِمِيقَاتِنَا وَكَلَّمَهُ رَبُّهُ قَالَ رَبِّ أَرِنِي أَنْظُرْ إِلَيْكَ قَالَ لَنْ تَرَانِي وَلَكِنِ انْظُرْ إِلَى الْجَبَلِ فَإِنِ اسْتَقَرَّ مَكَانَهُ فَسَوْفَ تَرَانِي فَلَمَّا تَجَلَّى رَبُّهُ لِلْجَبَلِ جَعَلَهُ دَكًّا وَخَرَّ مُوسَى صَعِقًا فَلَمَّا أَفَاقَ قَالَ سُبْحَانَكَ تُبْتُ إِلَيْكَ وَأَنَا أَوَّلُ الْمُؤْمِنِينَ</string>


    <string name="sura4_arbi">وَذَا النُّونِ إِذْ ذَهَبَ مُغَاضِبًا فَظَنَّ أَنْ لَنْ نَقْدِرَ عَلَيْهِ فَنَادَى فِي الظُّلُمَاتِ أَنْ لَا إِلَهَ إِلَّا أَنْتَ سُبْحَانَكَ إِنِّي كُنْتُ مِنَ الظَّالِمِينَ</string>
    <string name="sura5_arbi">وَقُلْ رَبِّ اغْفِرْ وَارْحَمْ وَأَنْتَ خَيْرُ الرَّاحِمِينَ</string>
    <string name="sura6_arbi">وَوَرِثَ سُلَيْمَانُ دَاوُودَ وَقَالَ يَا أَيُّهَا النَّاسُ عُلِّمْنَا مَنطِقَ الطَّيْرِ وَأُوتِينَا مِن كُلِّ شَيْءٍ إِنَّ هَٰذَا لَهُوَ الْفَضْلُ الْمُبِينُ</string>
    <string name="sura7_arbi">قَالَ رَبِّ إِنِّي ظَلَمْتُ نَفْسِي فَاغْفِرْ لِي فَغَفَرَ لَهُ إِنَّهُ هُوَ الْغَفُورُ الرَّحِيمُ</string>
    <string name="sura8_arbi">الَّذِينَ يَحْمِلُونَ الْعَرْشَ وَمَنْ حَوْلَهُ يُسَبِّحُونَ بِحَمْدِ رَبِّهِمْ وَيُؤْمِنُونَ بِهِ وَيَسْتَغْفِرُونَ لِلَّذِينَ آمَنُوا رَبَّنَا وَسِعْتَ كُلَّ شَيْءٍ رَحْمَةً وَعِلْمًا فَاغْفِرْ لِلَّذِينَ تَابُوا وَاتَّبَعُوا سَبِيلَكَ وَقِهِمْ عَذَابَ الْجَحِيمِ</string>
    <string name="sura9_arbi">وَالَّذِينَ جَاءُوا مِنْ بَعْدِهِمْ يَقُولُونَ رَبَّنَا اغْفِرْ لَنَا وَلِإِخْوَانِنَا الَّذِينَ سَبَقُونَا بِالْإِيمَانِ وَلَا تَجْعَلْ فِي قُلُوبِنَا غِلًّا لِلَّذِينَ آمَنُوا رَبَّنَا إِنَّكَ رَءُوفٌ رَحِيمٌ</string>
    <string name="sura10_arbi">قَدْ كَانَتْ لَكُمْ أُسْوَةٌ حَسَنَةٌ فِي إِبْرَاهِيمَ وَالَّذِينَ مَعَهُ إِذْ قَالُوا لِقَوْمِهِمْ إِنَّا بُرَاء مِنكُمْ وَمِمَّا تَعْبُدُونَ مِن دُونِ اللَّهِ كَفَرْنَا بِكُمْ وَبَدَا بَيْنَنَا وَبَيْنَكُمُ الْعَدَاوَةُ وَالْبَغْضَاء أَبَدًا حَتَّى تُؤْمِنُوا بِاللَّهِ وَحْدَهُ إِلَّا قَوْلَ إِبْرَاهِيمَ لِأَبِيهِ لَأَسْتَغْفِرَنَّ لَكَ وَمَا أَمْلِكُ لَكَ مِنَ اللَّهِ مِن شَيْءٍ رَّبَّنَا عَلَيْكَ تَوَكَّلْنَا وَإِلَيْكَ أَنَبْنَا وَإِلَيْكَ الْمَصِيرُ</string>
    <string name="sura11_arbi">قَالُوا سُبْحَانَ رَبِّنَا إِنَّا كُنَّا ظَالِمِينَ</string>

    <string name="answer1">অর্থ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="sura1"></string>
    <string name="sura1_1"></string>

    <string name="sura2"></string>
    <string name="sura2_1"></string>
    <string name="sura2_2"></string>


    <string name="sura3"></string>
    <string name="sura3_1"></string>


    <string name="sura4"></string>
    <string name="sura5"></string>
    <string name="sura6"></string>
    <string name="sura7"></string>
    <string name="sura8"></string>
    <string name="sura9"></string>
    <string name="sura10"></string>
    <string name="sura11"></string>




    <string name="sura1_arbi"></string>
    <string name="sura1_1_arbi"></string>

    <string name="sura2_arbi"></string>
    <string name="sura2_1_arbi"></string>
    <string name="sura2_2_arbi"></string>


    <string name="sura3_arbi"></string>
    <string name="sura3_1_arbi"></string>


    <string name="sura4_arbi"></string>
    <string name="sura5_arbi"></string>
    <string name="sura6_arbi"></string>
    <string name="sura7_arbi"></string>
    <string name="sura8_arbi"></string>
    <string name="sura9_arbi"></string>
    <string name="sura10_arbi"></string>
    <string name="sura11_arbi"></string>-->
</resources>
