<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tips7Continer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB88A">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/backButton5"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" Back"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_pressed"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="৭ আল-আরাফ"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="576dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="47dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="102dp">
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:text="আল-আরাফ: আয়াত-২৩,১৪৩"
                android:textColor="@color/colorAccent"
                android:textIsSelectable="true"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sura3_arbi"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/answer1"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tv_justified_paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sura3"
                android:textColor="#0F0F0F"
                android:textIsSelectable="true"
                android:textSize="18sp" />
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sura3_1_arbi"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/answer1"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="80dp"
                android:text="@string/sura3_1"
                android:textColor="#0F0F0F"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>